force-app/main/default/objects/Congress_Component_Metadata__mdt/Congress_Component_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>Used for specifying of congresses in congressEvaluationCertificates component.</description>
    <label>Congress Component Metadata</label>
    <pluralLabel>Congresses Components Metadata</pluralLabel>
</CustomObject>