force-app/main/default/objects/Congress_Component_Metadata__mdt/fields/Congress_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Congress_End_Date__c</fullName>
    <description>Used to sort records by date</description>
    <label>Congress End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>