force-app/main/default/objects/Congress_Component_Metadata__mdt/fields/Congress_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Congress_External_Id__c</fullName>
    <inlineHelpText>External Id of congress to find congress in ean-api.m-anage.com</inlineHelpText>
    <label>Congress External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>