force-app/main/default/objects/Congress_Component_Metadata__mdt/fields/Congress_Name__c.field-meta.xml
<CustomField>
    <fullName>Congress_Name__c</fullName>
    <inlineHelpText>Congress name displayed in component.</inlineHelpText>
    <label>Congress Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>