force-app/main/default/objects/Congress_Component_Metadata__mdt/fields/Is_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Is_Credentials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one record named &quot;Credentials&quot;  in whole metadata object can be created with checked this checkbox. To update credentials for authorization update existed record.</description>
    <inlineHelpText>Check only for a record which contains authorization credentials from ean-api.m-anage.com</inlineHelpText>
    <label>Is Credentials?</label>
    <type>Checkbox</type>
</CustomField>