force-app/main/default/objects/Congress_Component_Metadata__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Used only once for a record with label &quot;Credentials&quot;.</description>
    <inlineHelpText>Don&apos;t fill it if you add a new congress.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>